test/fail_compilation/fail6795.d
// 6795

void main() {
    enum int[] array = [0];
    array[0]++;
    array[0] += 3;
}



